fix gap between adventage and plan blocks (use margins)

--- a/landing-page/css/awesome.css
+++ b/landing-page/css/awesome.css
@@ -1,4 +1,3 @@
-.container,
 .advantages__item,
 .advantages__image {
   display: flex;
@@ -28,11 +27,12 @@
 .advantages {
   display: flex;
   justify-content: space-between;
-  margin-top: 67px;
+  margin: 67px -15px 0;
 }
 
 .advantages__item {
-  flex-basis: 30%;
+  max-width: 350px;
+  margin: 0 15px;
 }
 
 .advantages__image {
@@ -51,9 +51,13 @@
 }
 
 /* adaptive */
-@media (max-width: 639px) {
+@media (max-width: 768px) {
   .advantages {
     flex-direction: column;
+  }
+  .advantages__item {
+    margin-left: 0;
+    margin-right: 0;
   }
   .advantages__item:not(:first-child) {
     margin: 35px 0 0;
