--- a/landing-page/css/pricing.css
+++ b/landing-page/css/pricing.css
@@ -2,14 +2,6 @@
   background-color: #f5f5f5;
 }
 
-.container,
-.plans__item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .pricing {
   padding: 80px 0 90px;
 }
@@ -30,14 +22,15 @@
 
 .plans {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-  margin-top: 52px;
+  justify-content: center;
+  justify-items: center;
+  flex-wrap: wrap;
+  margin: 12px -15px 0;
 }
 
 .plans__item {
-  flex-basis: 29%;
-  display: block;
+  width: 350px;
+  margin: 40px 15px 0;
 }
 
 .plans__tarif,
@@ -80,12 +73,19 @@
 }
 
 /* adaptive */
-@media (max-width: 639px) {
+@media (max-width: 768px) {
   .plans {
     flex-direction: column;
   }
-  .plans__item:not(:first-child) {
-    margin: 40px 0 0;
+  .plans__item {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+@media (max-width: 368px) {
+  .plans,
+  .plans__item {
+    width: 100%;
   }
 }
 /* /adaptive */
