--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -10,6 +10,10 @@
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   max-width: 1170px;
   margin: auto;
   padding: 0 15px;
